# gie_v2

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: bumpversion.yaml  ci.yaml  deploy_docs.yaml
AsyncGieClient/: index.html
BaseClient/: index.html
GieClient/: index.html
Helpers/: index.html
Quickstart/: index.html
docs/: AsyncGieClient.md  BaseClient.md  GieClient.md  Helpers.md  Quickstart.md  index.md
search/: search_index.json
src/api_models/: platform.py
src/clients/: base_gie_client.py  gie_client.py
src/roiti/gie_client/api_models/: platform.py
src/roiti/gie_client/clients/: async_gie_client.py  base_gie_client.py  gie_client.py
src/roiti/gie_client/utils/: helpers.py
src/utils/: cutom_types.py  helpers.py
tests/: test_gie_client.py  test_validation_heplers.py
